added crud editor and display for business plans

--- a/static/html/homepage.html
+++ b/static/html/homepage.html
@@ -106,11 +106,15 @@
       </div>
     </div>
     <div class="right-sidebar">
-      <ol>
+      <h1>Club Happenings</h1>
+      <div
+        style="justify-contents: flex-start; text-align: left"
+        class="vstack"
+      >
         {{#each business_plans}}
-        <li>{{this}}</li>
+        <h2>{{this}}</h2>
         {{/each}}
-      </ol>
+      </div>
     </div>
   </div>
 </html>
