bug fixes and layout improvments

--- a/static/html/page-editor.html
+++ b/static/html/page-editor.html
@@ -31,7 +31,7 @@
       <div>
         <label>Author(s)</label>
         <input
-          placeholder="oxy email address, seperate by commas"
+          placeholder="ex: John Mulaney, Simon Rich, & Harper Steele"
           required
           value="{{authors}}"
           name="authors"
