--- a/static/html/404.html
+++ b/static/html/404.html
@@ -1,7 +1,15 @@
 <html>
-  <h1>404 - Not Found</h1>
-  <h2>
-    Whoopsie Daisy. We've been scrubbing our records in anticipation of a
-    lawsuit.
-  </h2>
+  <link rel="stylesheet" href="/static/html/style.css" />
+
+  <div class="vstack" style="width: 90%; margin: 0 auto">
+    <h1>404 - Not Found</h1>
+    <h2>
+      Whoopsie Daisy. We've been scrubbing our records in anticipation of a
+      lawsuit.
+      <br />
+      <br />
+
+      Go <a href="/" style="color: blue">Home?</a>
+    </h2>
+  </div>
 </html>
