added mobile layout

--- a/static/html/404.html
+++ b/static/html/404.html
@@ -1,5 +1,10 @@
 <html>
-  <link rel="stylesheet" href="/static/html/style.css" />
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="/static/html/style.css" />
+  </head>
 
   <div class="vstack" style="width: 90%; margin: 0 auto">
     <h1>404 - Not Found</h1>
