--- a/static/html/homepage.html
+++ b/static/html/homepage.html
@@ -1,5 +1,8 @@
 <html>
   <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/static/html/style.css" />
   </head>
   <header>
