--- a/static/html/login.html
+++ b/static/html/login.html
@@ -1,5 +1,10 @@
 <html>
-  <link rel="stylesheet" href="/static/html/style.css" />
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="/static/html/style.css" />
+  </head>
   <script
     src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js"
     integrity="sha384-Akqfrbj/HpNVo8k11SXBb6TlBWmXXlYQrCSqEWmyKJe+hDm3Z/B2WVG4smwBkRVm"
