--- a/static/html/homepage.html
+++ b/static/html/homepage.html
@@ -67,6 +67,18 @@
     <span>{{ date }}</span>
     <span>3 Easy Payments of $9.99+S&amp;H</span>
   </div>
+  <div class="headline-scroller">
+    <div class="container hstack">
+      {{#each headlines}}
+      <h2>{{this}}</h2>
+      {{/each}}
+    </div>
+    <div class="container hstack" aria-hidden="true">
+      {{#each headlines}}
+      <h2>{{this}}</h2>
+      {{/each}}
+    </div>
+  </div>
   <div style="display: flex; margin: 0 auto; width: 100%; overflow: auto">
     <div class="left-sidebar">
       <h1>
