added hamburger menu for mobi;e le

--- a/static/html/homepage.html
+++ b/static/html/homepage.html
@@ -60,6 +60,18 @@
       <br />
       <a href="/auth/home" style="font-size: 1em; color: blue">Member Login</a>
     </div>
+    <label for="menu-toggle">
+      <img
+        class="menu-icon"
+        src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Hamburger_icon.svg"
+        alt=""
+      />
+    </label>
+    <input type="checkbox" id="menu-toggle" value="false" />
+    <div class="menu-items-container vstack">
+      <a href="/business-plans"> <h2>Business Plans</h2></a>
+      <a href="/auth/home"> <h2>Member Login</h2></a>
+    </div>
   </header>
 
   <div class="top-banner">
