--- a/static/html/business-plans.html
+++ b/static/html/business-plans.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/static/html/style.css" />
   </head>
+
   <header>
     <div class="slogan">
       "All the gossip <br />
@@ -16,7 +17,7 @@
           src="/static/img/fang-logo.svg"
           alt="Fang Logo"
           style="object-fit: contain; height: 12em"
-      />
+        />
       </a>
 
       <div class="socials hstack">
@@ -71,20 +72,15 @@
       <a href="/auth/home"> <h2>Member Login</h2></a>
     </div>
   </header>
-
   <div class="top-banner">
     <span>VOL XXXICCCI...76,326</span>
     <span>{{ date }}</span>
     <span>3 Easy Payments of $9.99+S&amp;H</span>
   </div>
-  <div class="article-body vstack">
-  <h1>{{article.title}}<h1>
-      <h2>By {{article.authors}} - Published {{article.formatted_date}}<h2>
-        {{#if article.thumbnail_slug}}
-          <img src={{article.thumbnail_slug}}/>
-        {{/if}}
-      {{#each body}}
-        <p>{{{this}}}</p>
-      {{/each}}
+  <div class="vstack" style="width: 90%; margin: 0 auto">
+    <h1>Business Plans</h1>
+    {{#each bp}}
+    <h2 style="font-weight: 300">{{this}}</h2>
+    {{/each}}
   </div>
 </html>
