added buncha shit

--- a/static/html/business-plans.html
+++ b/static/html/business-plans.html
@@ -68,6 +68,7 @@
     </label>
     <input type="checkbox" id="menu-toggle" value="false" />
     <div class="menu-items-container vstack">
+      <a href="/members"><h2>Members</h2></a>
       <a href="/business-plans"> <h2>Business Plans</h2></a>
       <a href="/auth/home"> <h2>Member Login</h2></a>
     </div>
