--- a/static/html/page-editor.html
+++ b/static/html/page-editor.html
@@ -43,6 +43,16 @@
         />
       </div>
       <div>
+        <label>Date</label>
+        <input
+          placeholder="mm/dd/yyyy (ex: 05/05/2006)"
+          required
+          value="{{date}}"
+          name="date"
+        />
+      </div>
+
+      <div>
         <label>Article Type</label>
         <input
           placeholder="(video|article|graphic)"
