--- a/static/html/member-page.html
+++ b/static/html/member-page.html
@@ -16,8 +16,7 @@
           src="/static/img/fang-logo.svg"
           alt="Fang Logo"
           style="object-fit: contain; height: 12em"
-      />
-      </a>
+      /></a>
 
       <div class="socials hstack">
         <a
@@ -57,6 +56,8 @@
       Horse Racing Gambling Odds Newsletter. Any appearance of actual facts or
       information is purely coincidental. For legal inquires contact
       dersh@law.harvard.edu.
+      <br />
+      <a href="/auth/home" style="font-size: 1em; color: blue">Member Login</a>
     </div>
     <label for="menu-toggle">
       <img
@@ -78,14 +79,53 @@
     <span>{{ date }}</span>
     <span>3 Easy Payments of $9.99+S&amp;H</span>
   </div>
-  <div class="article-body vstack">
-  <h1>{{article.title}}<h1>
-      <h2>By {{{article.formatted_authors}}} - Published {{article.formatted_date}}<h2>
-        {{#if article.thumbnail_slug}}
-          <img src={{article.thumbnail_slug}}/>
+  <div class="profile-display-container vstack">
+    <img src="/static/headshots/{{author.formatted_name}}.jpg" />
+    <h1>{{author.name}} {{author.formatted_year}}</h1>
+    <h2>{{author.club_position}}</h2>
+    <p>{{author.bio}}</p>
+  </div>
+
+  <h3
+    style="
+      margin: 0 auto;
+      width: 100%;
+      text-align: center;
+      margin-top: 1.2em;
+      font-size: 1.75em;
+      text-decoration: underline;
+    "
+  >
+    Articles
+  </h3>
+  <div
+    class="article-container"
+    style="padding-bottom: 4em; font-size: 0.85rem"
+  >
+    {{#each articles}}
+    <a href="/article/{{article_id}}">
+      <div class="article">
+        <h1>{{title}}</h1>
+        <h2>By {{authors}} - Published {{formatted_date}}</h2>
+        {{#if thumbnail_slug}}
+        <p>{{description}}</p>
+        <img src="{{thumbnail_slug}}" />
+        {{/if}} {{#if description}} {{/if}} {{#if ../canUserEdit}}
+        <div class="hstack icon-bar">
+          <a href="/page-editor/{{article_id}}">
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/d/de/Noun_Project_edit_icon_1038134.svg"
+              alt=""
+          /></a>
+          <a href="/delete/{{article_id}}">
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/9/9c/Trash-can_-_Delapouite_-_game-icons.svg"
+              alt=""
+          /></a>
+        </div>
         {{/if}}
-      {{#each body}}
-        <p>{{{this}}}</p>
-      {{/each}}
+      </div>
+    </a>
+    {{/each}}
   </div>
 </html>
