added buncha shit

--- a/static/html/edit-profile.html
+++ b/static/html/edit-profile.html
@@ -43,7 +43,7 @@
     </div>
     <div>
       <label>Year</label>
-      <input placeholder="2028" required value="{{name}}" name="year" />
+      <input placeholder="2028" required value="{{year}}" name="year" />
     </div>
     <textarea
       required
