--- a/static/html/article.html
+++ b/static/html/article.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <script src="//mozilla.github.io/pdf.js/build/pdf.mjs" type="module"></script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
