--- a/static/html/article.html
+++ b/static/html/article.html
@@ -5,6 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/static/html/style.css" />
+    <title>{{article.title}}</title>
+    <meta
+      name="description"
+      content="FANG is Occidental College's nearly 80-year-old humor magazine that's still going strong. It currently publishes more than one issue a year, including themed zines and bi-annual fortnightlys. It's where Monty Python's Terry Gillman got his start, and that's it. It has a accolade-to-year ratio of 1/80."
+    />
+    <meta name="author" content="{{article.authors}}">
   </head>
   <header>
     <div class="slogan">
