--- a/static/html/business-plans.html
+++ b/static/html/business-plans.html
@@ -4,6 +4,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/static/html/style.css" />
+    <title>FANG: Occidental's 79-Year-Old Humor Magazine</title>
+    <meta
+      name="description"
+      content="FANG is Occidental College's nearly 80-year-old humor magazine that's still going strong. It currently publishes more than one issue a year, including themed zines and bi-annual fortnightlys. It's where Monty Python's Terry Gillman got his start, and that's it. It has a accolade-to-year ratio of 1/80."
+    />
   </head>
 
   <header>
