--- a/static/html/member-page.html
+++ b/static/html/member-page.html
@@ -4,6 +4,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/static/html/style.css" />
+    <title>{{author.name}} - FANG</title>
+    <meta
+      name="description"
+      content="FANG is Occidental College's nearly 80-year-old humor magazine that's still going strong. It currently publishes more than one issue a year, including themed zines and bi-annual fortnightlys. It's where Monty Python's Terry Gillman got his start, and that's it. It has a accolade-to-year ratio of 1/80."
+    />
   </head>
   <header>
     <div class="slogan">
@@ -103,7 +108,7 @@
     style="padding-bottom: 4em; font-size: 0.85rem; border: none; width: min(75em, 90vw)"
   >
     {{#each articles}}
-    <a href="/article/{{article_id}}">
+    <a href="/article/t/{{formatted_title}}">
       <div class="article" >
         <h1>{{title}}</h1>
         <h2>By {{{formatted_authors}}} - Published {{formatted_date}}</h2>
