--- a/static/html/members.html
+++ b/static/html/members.html
@@ -4,6 +4,19 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/static/html/style.css" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-K4CEZ1KXXZ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-K4CEZ1KXXZ");
+    </script>
     <title>FANG: Occidental's 79-Year-Old Humor Magazine</title>
     <meta
       name="description"
