--- a/static/html/article.html
+++ b/static/html/article.html
@@ -1,5 +1,13 @@
 <html>
   <head>
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-K4CEZ1KXXZ"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-K4CEZ1KXXZ');
+  </script>
     <script src="//mozilla.github.io/pdf.js/build/pdf.mjs" type="module"></script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
