--- a/static/html/business-plans.html
+++ b/static/html/business-plans.html
@@ -14,7 +14,7 @@
       gtag("js", new Date());
       gtag("config", "G-K4CEZ1KXXZ");
     </script>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/static/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/static/html/style.css" />
     <title>FANG: Occidental's 79-Year-Old Humor Magazine</title>
