--- a/static/html/article.html
+++ b/static/html/article.html
@@ -10,7 +10,7 @@
   </script>
     <script src="//mozilla.github.io/pdf.js/build/pdf.mjs" type="module"></script>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/static/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/static/html/style.css" />
     <title>{{article.title}}</title>
