--- a/static/html/article.html
+++ b/static/html/article.html
@@ -96,7 +96,7 @@
   </div>
   <div class="article-body vstack">
   <h1>{{article.title}}<h1>
-      <h2>By {{{article.formatted_authors}}} - Published {{article.formatted_date}}<h2>
+        <h2>By {{{article.formatted_authors}}} - Published {{article.formatted_date}}</h2>
         {{#if article.thumbnail_slug}}
           <img src={{article.thumbnail_slug}} />
         {{/if}}
